PROJECT(lsgo_gpu)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -std=c++11 -ggdb -DDEBUG")

IF (NOT CMAKE_BUILD_TYPE)
   SET(CMAKE_BUILD_TYPE "Debug")
ENDIF(NOT CMAKE_BUILD_TYPE)

FILE(GLOB SRCLIB F*.cpp)
SET(SRCLIB ${SRCLIB} Benchmarks.cpp)

ADD_LIBRARY(lsgo ${SRCLIB})
ADD_EXECUTABLE(demo demo.cpp)
TARGET_LINK_LIBRARIES(demo lsgo m)
